--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
                             <div class="games_zone mx-auto mt-36 mx-auto">
                                 <h1 class="uppercase font-black text-2xl absolute top-7 left-16">игровые зоны</h1>
                             </div>
+                            <div class="flex justify-center photos">
+                                <div>
+                                    <img src="img/photo2.jpg" alt="photo">
+                                </div>
+                                <div>
+                                    <img src="img/photo1.jpg" alt="photo">
+                                </div>
+                                <div>
+                                    <img src="img/photo3.jpg" alt="photo">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-start-3 col-end-11 text-right photos_text">
+                            <h2 class="font-bold text-3xl uppercase my-4">Название опции вип-зала</h2>
+                            <p class="ml-auto font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
                 </div>
