--- a/index.html
+++ b/index.html
@@ -76,7 +76,21 @@
                 </div>
             </section>
             <section>
-                <div id="map"></div>
+                <div class="map relative flex justify-center">
+                    <div id="map"></div>
+                    <div class="container absolute top-0 h-full map_info">
+                        <div class="grid grid-cols-12 h-full">
+                            <div class="col-start-2 col-end-3">
+                                <div class="arrival mt-64 relative">
+                                    <h1 class="font-black uppercase text-2xl absolute left-6 top-12">как добраться</h1>
+                                </div>
+                            </div>
+                            <div class="col-start-10 col-end-12 relative">
+                                <p class="address absolute bottom-20 text-lg font-semibold">КРУГЛОСУТОЧНО<br>пр. Маркса 18, 3 этаж</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
 
