--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                             </div>
                             <div class="flex justify-center photos">
                                 <div>
-                                    <img src="img/photo2.jpg" alt="photo">
+                                    <img src="img/photo2.webp" alt="photo">
                                 </div>
                                 <div>
-                                    <img src="img/photo1.jpg" alt="photo">
+                                    <img src="img/photo1.webp" alt="photo">
                                 </div>
                                 <div>
-                                    <img src="img/photo3.jpg" alt="photo">
+                                    <img src="img/photo3.webp" alt="photo">
                                 </div>
                             </div>
                         </div>
