--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <div class="flex justify-between font-medium uppercase">
                                 <a class="block h-fit my-auto" href="">о клубе</a>
                                 <a class="block h-fit my-auto" href="">premium</a>
-                                <img src="img/logo_nav.svg" alt="nav_logo">
+                                <img src="img/logo_nav.svg" width="400" height="75" alt="nav_logo">
                                 <a class="block h-fit my-auto" href="">как добраться</a>
                                 <a class="block h-fit my-auto" href="">контакты</a>
                             </div>
@@ -32,7 +32,7 @@
                 <div class="container mx-auto">
                     <div class="grid grid-cols-12">
                         <div class="col-start-2 col-end-12 bg-gray-500 video">
-                            <img class="left-16" src="img/logo.svg" alt="logo">
+                            <img class="left-16" src="img/logo.svg" width="458" height="118" alt="logo">
                         </div>
                     </div>
                 </div>
@@ -58,13 +58,13 @@
                             </div>
                             <div class="flex justify-center photos">
                                 <div>
-                                    <img src="img/photo2.webp" alt="photo">
+                                    <img src="img/photo2.webp" width="607" height="407" alt="photo">
                                 </div>
                                 <div>
-                                    <img src="img/photo1.webp" alt="photo">
+                                    <img src="img/photo1.webp" width="772" height="381" alt="photo">
                                 </div>
                                 <div>
-                                    <img src="img/photo3.webp" alt="photo">
+                                    <img src="img/photo3.webp" width="737" height="375" alt="photo">
                                 </div>
                             </div>
                         </div>
