--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                     <div class="col-span-12">
                         <nav class="py-4">
                             <div class="flex justify-between font-medium uppercase">
-                                <a class="block h-fit my-auto" href="">о клубе</a>
-                                <a class="block h-fit my-auto" href="">premium</a>
+                                <a class="block h-fit my-auto" href="#about">о клубе</a>
+                                <a class="block h-fit my-auto" href="#zones">premium</a>
                                 <img src="img/logo_nav.svg" width="400" height="75" alt="nav_logo">
-                                <a class="block h-fit my-auto" href="">как добраться</a>
+                                <a class="block h-fit my-auto" href="#go">как добраться</a>
                                 <a class="block h-fit my-auto" href="">контакты</a>
                             </div>
                         </nav>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </section>
-            <section class="mt-8">
+            <section class="mt-8 relative" id="about">
                 <div class="container mx-auto">
                     <div class="grid grid-cols-12">
                         <div class="col-start-2 col-end-7">
@@ -48,8 +48,159 @@
                         </div>
                     </div>
                 </div>
+                <div class="icons absolute mx-auto overflow-hidden">
+                    <div class="icons_block w-1/2 ml-auto h-full flex gap-8 overflow-hidden">
+                        <div class="icons_part ml-8">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                        </div>
+
+                        <div class="icons_part">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                            <img src="img/light.svg" width="27" height="41" alt="light">
+                            <img src="img/bird.svg" width="75" height="40" alt="bird">
+                        </div>
+                    </div>
+                </div>
             </section>
-            <section>
+            <section id="zones">
                 <div class="container mx-auto">
                     <div class="grid grid-cols-12">
                         <div class="col-span-12">
@@ -75,7 +226,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="go">
                 <div class="map relative flex justify-center">
                     <div id="map"></div>
                     <div class="container absolute top-0 h-full map_info">
