--- a/index.html
+++ b/index.html
@@ -244,6 +244,23 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="container mx-auto">
+                <div class="grid grid-cols-12 mt-32 items-center">
+                    <div class="col-start-1 col-end-4">
+                        <p>© 2022 Киберспорт Арена Авангард<br>Все права защищены</p>
+                    </div>
+                    <div class="col-start-11 col-end-13">
+                        <div class="flex gap-4 ml-auto items-center">
+                            <a href="https://instagram.com/arena_cyberomsk"><img src="img/inst.svg" alt="instagram"></a>
+                            <a href="https://vk.com/arenacyberomsk"><img src="img/vk.svg" alt="vk"></a>
+                            <a href="https://youtube.com/omskcyberarena"><img src="img/youtube.svg" alt="youtube"></a>
+                            <a href="https://twitch.tv/arenacyberomsk1"><img src="img/twitch.svg" alt="twitch"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
         <script src="js/index.js"></script>
     </body>
