--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Арена "CYBEROMSK"</title>
         <link rel="stylesheet" href="css/index.css">
+        <link rel="icon" type="image/png" href="img/favicon.png" sizes="196x196" />
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     </head>
