fix video adaptive

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         </header>
         <div class="background" id="background"></div>
         <main>
-            <section class="lg:mt-8">
+            <section>
                 <div class="container mx-auto">
                     <div class="grid grid-cols-12">
-                        <div class="col-start-2 col-end-12 video mt-8">
-                            <video class="my-auto block" width="100%" height="100%" autoplay muted loop>
+                        <div class="col-start-2 col-end-12 video mt-8 bg-gray-300">
+                            <video autoplay muted loop>
                                 <source src="media/video.mp4" type="video/mp4">
                             </video>
                             <img class="sm:left-8 md:left-16" src="img/logo.svg" width="458" height="118" alt="logo">
@@ -59,11 +59,11 @@
                     </div>
                 </div>
             </section>
-            <section class="mt-8 relative" id="about">
+            <section class="relative mt-6" id="about">
                 <div class="container mx-auto">
                     <div class="grid grid-cols-12">
                         <div class="col-start-2 col-end-12 md:col-end-9 lg:col-end-7">
-                            <div class="about mx-auto lg:mt-12">
+                            <div class="about mx-auto">
                                 <h1 class="uppercase font-black text-2xl absolute bottom-6 left-24">о клубе</h1>
                             </div>
                             <p class="font-light mt-8">Это уникальный, киберспортивный проект, с многолетним опытом управления<br>компьютерными клубами и организации киберспортивных мероприятий. Данное сообщество организовано для популяризации киберспортивной тематики на наших просторах. Арена Cyberomsk является лучшей специализированной киперспортивной площадкой, оснащенной самыми современными компьютерами, которые удовлетворят запросы самого искушенного посетителя.</p>
