--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </main>
         <footer>
             <div class="container mx-auto">
-                <div class="grid grid-cols-12 md:mt-12 items-center">
+                <div class="grid grid-cols-12 mt-16 md:mt-24 items-center">
                     <div class="col-start-1 col-end-12 md:col-start-1 md:col-end-7 mb-4 md:mb-0">
                         <p class="text-center md:text-left">© 2022 Киберспорт Арена Авангард<br>Все права защищены</p>
                     </div>
